Revision history for Perl module Acme::Ford::Prefect::FFI

0.29 2017-07-30 06:38:55 -0400
  - Require Acme::Alien::DontPanic 0.042 (Alien::Base 0.75 Alien::Base::ModuleBuild 0.042)

0.28 Jan 31, 2017
  - Require Acme::Alien::DontPanic 0.030 (Alien::Base 0.030)

0.27  Nov 2, 2016
  - Require Acme::Alien::DontPanic 0.030 (Alien::Base 0.030)

0.26  Jun 22, 2016
  - Require Acme::Alien::DontPanic 0.029 (Alien::Base 0.029)

0.25  Mar 14, 2016
  - Require Acme::Alien::DontPanic 0.028 (Alien::Base 0.028)

0.24  Jan 20, 2016
  - Require Acme::Alien::DontPanic 0.027 (Alien::Base 0.025)

0.23  Jan 10, 2016
  - Require Acme::Alien::DontPanic 0.025 (Alien::Base 0.024)

0.22  Jul 20, 2015
  - Require Acme::Alien::DontPanic 0.025 (Alien::Base 0.022)

0.21  Jul 13, 2015
  - Require Acme::Alien::DontPanic 0.024 (Alien::Base 0.020)

0.20  Apr 27, 2015
  - Require Acme::Alien::DontPanic 0.023 (Alien::Base 0.017)

0.19  Apr 24, 2015
  - Require Acme::Alien::DontPanic 0.022 (Alien::Base 0.017)

0.18  Apr 22, 2015
  - Require Acme::Alien::DontPanic 0.021 (Alien::Base 0.016)

0.17  Mar 17, 2015
  - Require Acme::Alien::DontPanic 0.020 (Alien::Base 0.015)

0.16  Feb 25, 2015
  - Require Acme::Alien::DontPanic 0.018 (Alien::Base 0.014)

0.15  Feb 22, 2015
  - Fix bug in diagnostic test that would cause it to die
    if Acme::Alien::DontPanic was installed with install_type=system

0.14  Feb 22, 2015
  - Require Acme::Alien::DontPanic 0.016 (Alien::Base 0.012)

0.12  Feb 22, 2015
  - Require Acme::Alien::DontPanic 0.015 (Alien::Base 0.011)

0.11  Feb 17, 2015
 - Experimental work from 0.09 and 0.10 is now in Alien::Base
   removing from this distro

0.10  Feb 13, 2015
  - Use FFI::CheckLib now not experimental recursive (was _r)
    option.

0.09  Feb 12, 2015
  - Use FFI::CheckLib experimental _r option to see
    if we can more reliably test this via cpan testers.

0.08  Feb 6, 2015
  - Add README
  - Specify license in POD

0.07  Jan 22, 2015
  - FFI::Platypus 0.09 compatability
