@@ -6,7 +6,7 @@ build_requires:
   ExtUtils::CBuilder: '0'
   Test2::V0: '0'
 configure_requires:
-  Acme::Alien::DontPanic: '0.042'
+  Acme::Alien::DontPanic: '0.044'
   Module::Build: '0.38'
 dynamic_config: 1
 generated_by: 'Module::Build version 0.4224, CPAN::Meta::Converter version 2.150010'
