@@ -1,5 +1,7 @@
 Revision history for Perl module Acme::Ford::Prefect::FFI
 
+  - Require Acme::Alien::DontPanic 0.044 (Alien::Base 1.01 Alien::Base::ModuleBuild 0.044)
+
 0.29 2017-07-30 06:38:55 -0400
   - Require Acme::Alien::DontPanic 0.042 (Alien::Base 0.75 Alien::Base::ModuleBuild 0.042)
 
